--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,15 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "moment": "^2.24.0",
+    "random-gradient": "0.0.2",
     "react": "^16.13.1",
+    "react-avatar": "^3.9.6",
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
